Minor updates, mainly on comments